[project]
name = "ma4"
version = "0.1.0"
description = "ma4 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.114.0,<1.0.0",
    "mysql-connector-python==9.3.0",
    "chromadb==0.5.23",
    "networkx==3.4.2",
    "matplotlib==3.9.2",
    "mcp>=1.6.0",
    "mcpadapt>=0.1.3",
    "docker>=7.1.0",
    "helium==5.1.1",
    "youtube-transcript-api==0.6.3",
    "pytube==15.0.0"
]

[project.scripts]
ma4 = "ma4.main:run"
run_crew = "ma4.main:run"
train = "ma4.main:train"
replay = "ma4.main:replay"
test = "ma4.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
